src/yini_test/cases/golden/strict/valid/parser-mode/plain-yini-marker.strict.yini
@yini

^ App
name = "plain-yini-marker"
mode = "strict"
enabled = true

/END
