src/yini_test/cases/golden/strict/invalid/orphan-members/root-members-only.strict.yini
@yini strict

name = "strict-root-members-only"
enabled = true

/END
